[gd_scene format=3 uid="uid://ccmkm1kqcchfc"]

[ext_resource type="Script" uid="uid://wdr16pd1bliq" path="res://entities/player/scripts/player.gd" id="1_4kuee"]
[ext_resource type="Script" uid="uid://b0bo3hu20pc01" path="res://entities/player/scripts/camera_controller.gd" id="2_4kuee"]
[ext_resource type="Resource" uid="uid://chrpoy21q7kc0" path="res://entities/player/movement_states/stand.tres" id="2_c3xxp"]
[ext_resource type="Resource" uid="uid://cimut8yp6isf2" path="res://entities/player/movement_states/walk.tres" id="3_npwbq"]
[ext_resource type="Resource" uid="uid://c8aqa1n80e7ly" path="res://entities/player/movement_states/run.tres" id="4_v42im"]
[ext_resource type="Script" uid="uid://bedtvwiffyoe6" path="res://entities/player/scripts/movement_controller.gd" id="5_npwbq"]
[ext_resource type="Script" uid="uid://b2tn8v2t0tnjh" path="res://entities/player/scripts/animation_controller.gd" id="6_v42im"]
[ext_resource type="PackedScene" uid="uid://c7o3qbdkchako" path="res://entities/player/scenes/player_model.tscn" id="7_v42im"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_npwbq"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_npwbq"]
animation = &"CharacterArmature|Idle_Neutral"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v42im"]
animation = &"CharacterArmature|Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pn6s4"]
animation = &"CharacterArmature|Run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_v42im"]
blend_point_0/node = SubResource("AnimationNodeAnimation_npwbq")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_v42im")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_pn6s4")
blend_point_2/pos = 2.0
min_space = 0.0
max_space = 2.0
snap = 1.0

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_pn6s4"]
nodes/output/position = Vector2(760, 50)
nodes/movement_blend/node = SubResource("AnimationNodeBlendSpace1D_v42im")
nodes/movement_blend/position = Vector2(220, 60)
nodes/movement_anim_speed/node = SubResource("AnimationNodeTimeScale_npwbq")
nodes/movement_anim_speed/position = Vector2(450, 50)
node_connections = [&"output", 0, &"movement_anim_speed", &"movement_anim_speed", 0, &"movement_blend"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v42im"]
radius = 0.3
height = 1.8056641

[sub_resource type="SphereShape3D" id="SphereShape3D_gfjak"]
radius = 0.07

[node name="Player" type="CharacterBody3D" unique_id=561581043]
script = ExtResource("1_4kuee")
movement_states = {
"run": ExtResource("4_v42im"),
"stand": ExtResource("2_c3xxp"),
"walk": ExtResource("3_npwbq")
}

[node name="MovementController" type="Node" parent="." unique_id=1022700592 node_paths=PackedStringArray("player", "mesh_root")]
script = ExtResource("5_npwbq")
player = NodePath("..")
mesh_root = NodePath("../MeshRoot")

[node name="AnimationController" type="Node" parent="." unique_id=207613104 node_paths=PackedStringArray("animation_tree", "player")]
script = ExtResource("6_v42im")
animation_tree = NodePath("../MeshRoot/AnimationTree")
player = NodePath("..")

[node name="MeshRoot" type="Node3D" parent="." unique_id=1874987330]

[node name="player_model" parent="MeshRoot" unique_id=69029383 instance=ExtResource("7_v42im")]

[node name="AnimationTree" type="AnimationTree" parent="MeshRoot" unique_id=699843268]
root_node = NodePath("../player_model")
tree_root = SubResource("AnimationNodeBlendTree_pn6s4")
anim_player = NodePath("../player_model/AnimationPlayer")
parameters/movement_blend/blend_position = -0.0019102197
parameters/movement_anim_speed/scale = 1.0

[node name="AttackRaycast" type="RayCast3D" parent="MeshRoot" unique_id=1532577482]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, 2)
collision_mask = 4
debug_shape_custom_color = Color(0, 1, 1, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1369683741]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9418762, 0.049408406)
shape = SubResource("CapsuleShape3D_v42im")

[node name="CamRoot" type="Node3D" parent="." unique_id=1414036895]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)
script = ExtResource("2_4kuee")

[node name="CamYaw" type="Node3D" parent="CamRoot" unique_id=292533824]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="CamPitch" type="Node3D" parent="CamRoot/CamYaw" unique_id=338980675]

[node name="SpringArm3D" type="SpringArm3D" parent="CamRoot/CamYaw/CamPitch" unique_id=1911743984]
shape = SubResource("SphereShape3D_gfjak")
spring_length = 3.0

[node name="Camera3D" type="Camera3D" parent="CamRoot/CamYaw/CamPitch/SpringArm3D" unique_id=1302798066]
fov = 70.0

[connection signal="set_movement_direction" from="." to="MovementController" method="_on_set_movement_direction"]
[connection signal="set_movement_state" from="." to="MovementController" method="_on_set_movement_state"]
[connection signal="set_movement_state" from="." to="AnimationController" method="_on_set_movement_state"]
[connection signal="set_movement_state" from="." to="CamRoot" method="_on_set_movement_state"]
[connection signal="set_cam_rotation" from="CamRoot" to="MovementController" method="_on_set_cam_rotation"]
